Ajout du profiler pour HTTP, debug de la page profil

--- a/InovApi/templates/profil/index.html.twig
+++ b/InovApi/templates/profil/index.html.twig
@@ -19,6 +19,7 @@
                     {{form_widget(form.nom)}}
 
                 </div>
+                {{ form_row(form._token) }}
                 <div class="col-md-6">
                     <label for="nom" class="labels">Prénom</label>
 
@@ -27,13 +28,13 @@
                 </div>
             </div>
             <div class="row mt-3">
+                <!--
                 <div class="col-md-12">
                     <label for="nom" class="labels">Identifiant</label>
 
-                    {{form_widget(form.username)}}
 
                 </div>
-
+                -->
             </div>
 
             <div class="mt-5 text-center">
