Ajout de la page test, du test controller, du test/id

--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -14,7 +14,7 @@
     <link href="https://bootswatch.com/5/lumen/bootstrap.min.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     {% endblock %}
-    <title>{% block title %}Innov'Anglais - {% endblock %}</title>
+    <title>Innov'Anglais - {% block title %}{% endblock %}</title>
     {% block form %}{% endblock %}
 </head>
 
