--- a/InovApi/templates/base/index.html.twig
+++ b/InovApi/templates/base/index.html.twig
@@ -5,4 +5,8 @@
 {% block body %}
 <h1 class="text-center text-primary mt-4 pt-4 display-1 fw-bold"> Innov'Anglais</h1>
 <h2 class="text-center text-secondary mb-4 pb-4 display-2"> Apprendre l'Anglais est un jeu d'enfant </h2>
+
+<div class="container">
+
+</div>
 {% endblock %}
