--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -48,16 +48,34 @@
                             <a class="dropdown-item" href="{{path ('app_information')}}">Contributeur</a>
                         </div>
                     </li>
+                    {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('app_login')}}">Se connecter</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('app_register')}}">Je souhaite m'inscrire</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('app_logout')}}">
+                            {{app.user.username}}
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
 
-
+    {% for message in app.flashes('notice') %}
+    <h2 class="alert alert-warning text-center mt-4 mb-4" role="alert">
+        {{ message }}</h2>
+    {% endfor %}
+    {% for message in app.flashes('error') %}
+    <h2 class="alert alert-danger text-center mt-4 mb-4" role="alert">
+        {{ message }}</h2>
+    {% endfor %}
     {% block body %}{% endblock %}
 
     {% block javascripts %}
