--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -34,12 +34,12 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Accueil
+                        <a class="nav-link active" href="{{path('app_base')}}">Accueil
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Apprendre</a>
+                        <a class="nav-link" href="{{path('app_apprendre')}}">Apprendre</a>
                     </li>
 
                     <li class="nav-item dropdown">
