--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -61,7 +61,7 @@
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{path('app_logout')}}">
-                            {{app.user.username}}
+                            Se déconnecter de {{app.user.username}}
                         </a>
                     </li>
                     {% endif %}
