Made various style change

--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -20,7 +20,7 @@
 
 <body>
 
-    <div class="bg-picture"></div>
+    <div class="bg-picture" id="picture"></div>
     <nav class="navbar navbar-expand-lg navstyle">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{path('app_base')}}">
