--- a/InovApi/templates/information/contributeur.html.twig
+++ b/InovApi/templates/information/contributeur.html.twig
@@ -1,18 +1,17 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+<div style="margin-top: 5%">
+    <div class="container content"> 
+        <h1 class="text-center">Les contributeurs du projet</h1>
+        <ul class="list-group mt-5">
+            <li class="list-group-item">Axel Laude</li>
+            <li class="list-group-item">Tanguy Ozano</li>
+            <li class="list-group-item">Tom Martin</li>
+            <li class="list-group-item">Jonathan Sobkowiak </li>
+            <li class="list-group-item">Pierre Ritzzo</li>
+            <li class="list-group-item">Nicolas De Falco</li>
 
-<div class="page-header container mt-5">
-    <h1>Les contributeurs du projet</h1>
-</div>
-<div class="container">
-    <ul class="list-group mt-5">
-        <li class="list-group-item">Axel Laude</li>
-        <li class="list-group-item">Tanguy Ozano</li>
-        <li class="list-group-item">Tom Martin</li>
-        <li class="list-group-item">Jonathan Sobkowiak </li>
-        <li class="list-group-item">Pierre Ritzzo</li>
-        <li class="list-group-item">Nicolas De Falco</li>
-
-    </ul>
+        </ul>
+    </div>
 </div>
 {% endblock %}
