--- a/InovApi/templates/base/index.html.twig
+++ b/InovApi/templates/base/index.html.twig
@@ -4,7 +4,16 @@
 
 {% block body %}
 <div class="content" style="margin-top: 10%">
-    <h1 class="text-center text-primary mt-4 pt-4 display-1 fw-bold"> Innov'Anglais</h1>
-    <h2 class="text-center text-secondary mb-4 pb-4 display-2"> Apprendre l'Anglais est un jeu d'enfant </h2>
+    <div class="container content"> 
+        <ul class="list-group mt-5 connect-box" style="list-style-type: none;">
+            <li class="text-center text-secondary mt-4 pt-4 display-1 fw-bold">Innov'Anglais</li>
+            <li class="text-center text-primary mb-4 pb-4 display-2">Apprendre l'Anglais est un jeu d'enfant</li>
+        </ul>
+    </div>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="./js/function.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 {% endblock %}
