--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -78,6 +78,8 @@
     <h2 class="alert alert-danger text-center mt-4 mb-4" role="alert">
         {{ message }}</h2>
     {% endfor %}
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    
     {% block body %}{% endblock %}
 
     {% block javascripts %}
