--- a/InovApi/templates/mots/mots.html.twig
+++ b/InovApi/templates/mots/mots.html.twig
@@ -6,9 +6,30 @@
 {% block body %}
 <div class='container'>
     <div id="accordion">
+        <div class="card">
+                <div class="card-header" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-controls="collapse">
+                    <h5 class="mb-0" style='display:none;' id="editing">
+                        <p>                    
+                            <div class="input-group mb-3">
+                                <input id="themeEdit" aria-label="" aria-describedby="button-addon2">
+                                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Envoyer</button>
+                            </div>
+
+                            <img src='{{ asset('assets/add.png') }}' class='deletepermmodal' height='36' width='36' align='right' data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        </p>
+                    </h5>
+                    <h5 class="mb-0" id="notediting">
+                        <p>
+                            <em>Ajouter</em>
+
+                            <img src='{{ asset('assets/add.png') }}' id='deletepermmodal' height='36' width='36' align='right' data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        </p>
+                    </h5>
+                </div>
+            </div>
         {% for theme in listeTheme %}
             <div class="card">
-                <div class="card-header" data-bs-toggle="collapse" data-bs-target="#collapse{{theme.theme|replace({' ': "-"})}}" aria-expanded="false" aria-controls="collapse{{theme.theme|replace({' ': "-"})}}">
+                <div class="card-header" data-bs-toggle="collapse" data-bs-target="#collapse{{theme.theme|replace({' ': "-", "'": "-"})}}" aria-expanded="false" aria-controls="collapse{{theme.theme|replace({' ': "-", "'": "-"})}}">
                     <h5 class="mb-0" style='display:none;' id="{{theme.id}}editing">
                         <p>                    
                             <div class="input-group mb-3">
@@ -32,36 +53,41 @@
                     </h5>
                 </div>
 
-                <div id="collapse{{theme.theme|replace({' ': "-"})}}" class="collapse" data-bs-parent="#accordion">
+                <div id="collapse{{theme.theme|replace({' ': "-", "'": "-"})}}" class="collapse" data-bs-parent="#accordion">
                     <div class="card card-body">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Nom Francais</th>
-                                <th>Nom Anglais</th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for mot in theme.mots %}
+                        <table>
+                            <thead>
                                 <tr>
-                                    <td>{{mot.motFrancais}}</td>
-                                    <td>{{mot.motAnglais}}</td>
-                                    <td>
-                                        <select selected='{{theme.theme}}'>
-                                            {% for themes in listeTheme %}
-                                            <option>{{themes.theme}}</option>
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td><img src='{{ asset('assets/edit.png') }}' height='24' width='24' align='right'></td>
-                                    <td><img src='{{ asset('assets/delete.png') }}' height='24' width='24' align='right'></td>
+                                    <th>Nom Francais</th>
+                                    <th>Nom Anglais</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                {% for mot in theme.mots %}
+                                    <tr>
+                                        <td>{{mot.motFrancais}}</td>
+                                        <td>{{mot.motAnglais}}</td>
+                                        <td>
+                                            <select selected='{{theme.theme}}'>
+                                                {% for themes in listeTheme %}
+                                                <option>{{themes.theme}}</option>
+                                                {% endfor %}
+                                            </select>
+                                        </td>
+                                        <td><img src='{{ asset('assets/edit.png') }}' height='24' width='24' align='right'></td>
+                                        <td><img src='{{ asset('assets/delete.png') }}' height='24' width='24' align='right'></td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <button class="btn btn-info" type="button" id='addNouveauMot' data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                <img src='{{ asset('assets/add.png') }}' class='addnew' height='24' width='24' align='right'>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -110,6 +136,11 @@ $(document).ready(function(){
     $("#deletepermmodal").click(function () {
         $('#modalAction').text('supprimer');
         $('#modalMot').text('test');
+    });
+
+    $("#addNouveauMot").click(function () {
+        $('#modalAction').text('ajouter');
+        $('#modalMot').text('text');
     });
 
     function toggleThemeEdit(name)
