--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -60,6 +60,11 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{path('app_profil')}}">
+                            Profil
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{path('app_logout')}}">
                             Se déconnecter de {{app.user.username}}
                         </a>
