--- a/InovApi/templates/security/login.html.twig
+++ b/InovApi/templates/security/login.html.twig
@@ -27,7 +27,7 @@
                                     </div>
 
                                     <form>
-                                        <p>Merci de vous connectez avec vôtre compte</p>
+                                        <p>Merci de vous connectez avec votre compte</p>
 
                                         <div class="form-outline mb-4">
                                             <b>Nom d'utilisateur</b>
