--- a/InovApi/templates/security/login.html.twig
+++ b/InovApi/templates/security/login.html.twig
@@ -30,8 +30,8 @@
                                         <p>Merci de vous connectez avec votre compte</p>
 
                                         <div class="form-outline mb-4">
-                                            <b>Nom d'utilisateur</b>
-                                            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus placeholder="Nom d'utilisateur" />
+                                            <b>Login</b>
+                                            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus placeholder="Login" />
                                         </div>
 
                                         <div class="form-outline mb-4">
