--- a/InovApi/templates/information/ccm.html.twig
+++ b/InovApi/templates/information/ccm.html.twig
@@ -7,7 +7,7 @@
     <p class="container m-5">
     Le site Innov'Anglais a pour but de faciliter l'apprentissage de l'Anglais, de manière éducatif et sans prise de tête.
     <br>Avec Innov'Anglais, testé vos connaissance linguistique grâce a notre outils situé en page
-    "<a href="{{path('app_information')}}">Apprendre</a>".
+    "<a href="{{path('app_apprendre')}}">Apprendre</a>".
 
 
     <br>
