--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -9,6 +9,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     {% block stylesheets %}
     <!-- Bootstrap CSS -->
     <link href="https://bootswatch.com/5/lumen/bootstrap.min.css" rel="stylesheet">
