--- a/InovApi/templates/security/login.html.twig
+++ b/InovApi/templates/security/login.html.twig
@@ -41,7 +41,7 @@
                                         {% endif %}
 
                                         <div class="text-center pt-1 mb-5 pb-1">
-                                            <button class="btn btn-primary btn-block fa-lg bg-danger mb-3" type="submit">Se connecter</button>
+                                            <button class="btn btn-primary btn-block fa-lg bg-danger mb-3" type="submit" id="connect">Se connecter</button>
                                         </div>
 
                                         <div class="d-flex align-items-center justify-content-center pb-4">
@@ -78,4 +78,8 @@
         </div>
     #}
 </form>
+
+
+<script type="text/javascript" src="{{ asset('js/scriptLocalStorage.js') }}">
+</script>
 {% endblock %}
