--- a/InovApi/public/css/style.css
+++ b/InovApi/public/css/style.css
@@ -14,7 +14,6 @@
 }
 
 .content {
-    position: fixed;
     left: 0;
     right: 0;
     z-index: 2000;
@@ -25,6 +24,13 @@
 
 }
 
+.ccm {
+    background-color: black;
+    position: fixed;
+    width: 50%;
+    opacity: 80%;
+    margin-left: 5%;
+}
 
 
 .nav-toggle-overide {
@@ -67,4 +73,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+height: 100%;
 }
