--- a/InovApi/public/css/style.css
+++ b/InovApi/public/css/style.css
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    position: relative;
+    position: fixed;
 }
 
 .ccm {
@@ -73,7 +73,4 @@
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-height: 100%;
 }
