note par nivedu profil

--- a/InovApi/templates/profil/index.html.twig
+++ b/InovApi/templates/profil/index.html.twig
@@ -69,7 +69,7 @@
 								</td>
 								<td>{{resultat.test.niveau | capitalize}}
 								</td>
-								<td>{{resultat.score}}</td>
+								<td>{{resultat.score}}/{{resultat.test.lier.mots|length}}</td>
 							</tr>
 						{% endfor %}
 					</tbody>
