--- a/InovApi/templates/mots/mots.html.twig
+++ b/InovApi/templates/mots/mots.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-<div class='container'>
+<div class='container' style="margin-top: 5%">
     <div id="accordion">
         <div class="card">
                 <div class="card-header" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-controls="collapse">
