--- a/InovApi/public/css/style.css
+++ b/InovApi/public/css/style.css
@@ -1,7 +1,5 @@
 .navstyle {
     border-radius: 0% 0% 20% 20%;
-    --bs-text-opacity: 1;
-    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
     background: rgba(0, 155, 186, 0.7);
     margin: 0;
     box-sizing: border-box;
@@ -25,8 +23,6 @@
 
 }
 
-
-
 .nav-toggle-overide {
     position: fixed !important;
     left: 0;
@@ -43,7 +39,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-
     width: 100%;
     height: 100%;
     -webkit-filter: blur(5px);
@@ -61,6 +56,11 @@
     background-color: rgba(255, 255, 255, 0.8);
 }
 
+.connect-art {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+}
+
 .text {
     position: absolute;
     top: 0;
@@ -68,3 +68,38 @@
     width: 100%;
     height: 100%;
 }
+
+span:after {
+    clear:both;
+    content:"";
+    display:block;
+    text-align:center;
+    position:center
+}
+
+.imgLeft {
+    width:900px;
+    height:400px; 
+    border:0;
+    vertical-align:middle;
+    float:left;
+}
+
+.imgRight {
+    width:900px;
+    height:400px; 
+    border:0;
+    vertical-align:middle;
+    float:right;
+}
+
+footer {
+	text-align:    center;
+	padding-right: 10px;
+	margin-top:    20px;
+	position:center;
+	width:100%;
+	height: auto;
+}
+
+
