--- a/InovApi/templates/test/index.html.twig
+++ b/InovApi/templates/test/index.html.twig
@@ -3,14 +3,14 @@
 {% block title %}Hello TestController!{% endblock %}
 
 {% block body %}
-<div class="container text-center">
+<div class="container text-center content">
     <h1>Il y a actuellement {{lesTests|length}} de disponible</h1>
     <p>Cliquez sur l'un des test pour le commencer !</p>
 </div>
 {% set index = 1 %}
 
 {% for test in lesTests %}
-<a href="{{ path('app_test_id', {'id':test.id}) }}">test numéro {{index}}</a><br>
+<a href="{{ path('app_test_id', {'id':test.id}) }}" class="content">test numéro {{index}}</a><br>
 {% set index = index + 1 %}
 {% endfor %}
 {% endblock %}
