Ajout du classement

--- a/InovApi/templates/test/test.html.twig
+++ b/InovApi/templates/test/test.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Nouveau test !{% endblock %}
-
 {% block body %}
 <div>
     <input id="id" type="hidden" data-liste-id="{{liste.id}}" data-test-id="{{test.id}}" data-user-id="{{app.user.id}}">
@@ -25,12 +24,16 @@
     <div class="container text-center p-2 ecran">
         <p>Vous avez obtenu un résultat de <span id="nbScore">10</span>/<span id="nombreDeMots">20</span>
         </p>
-        <a href="{{path('app_base')}}"><button class="btn btn-primary m-2">Revenir au menu</button></a>
+        <a href="{{path('app_test')}}"><button class="btn btn-primary m-2">Revenir au menu</button></a>
     </div>
 </div>
 
-<script type="text/javascript" src="{{ asset('js/scriptTest.js') }}">
 
+
+{% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript" src="{{ asset('js/scriptTest.js') }}">
 </script>
 
 {% endblock %}
