--- a/InovApi/templates/base.html.twig
+++ b/InovApi/templates/base.html.twig
@@ -72,6 +72,11 @@
                             Faire des tests
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('app_classement')}}">
+                            Classement
+                        </a>
+                    </li>
                     {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{path('app_mots')}}">
