supp faire des tests

--- a/InovApi/templates/information/ccm.html.twig
+++ b/InovApi/templates/information/ccm.html.twig
@@ -23,7 +23,7 @@
             Une fois vos tests terminés, vous pouvez suivre votre progression dans l'onglet
             "<a href="{{path('app_profil')}}">Mon profil</a>".
             <br>
-            Un classement général vous est mis a disposition dans l'onglet "classement".
+            Un classement général vous est mis a disposition dans l'onglet "<a href="{{path('app_classement')}}">Classement</a>".
         </p>
 
     </div>
