Changed layout of main page

--- a/InovApi/templates/base/index.html.twig
+++ b/InovApi/templates/base/index.html.twig
@@ -10,29 +10,30 @@
             <li class="text-center text-primary mb-4 pb-4 display-2">Apprendre l'Anglais est un jeu d'enfant</li>
         </ul>
     </div>
-    <article class="connect-art" style="margin-top: 20%">
-        
-        
+    <div class="card" style="margin-top: 25%">
 
-        <img src="./css/fun.jpg" class="imgRight">
+        <div class="container">
+            <img src="./css/fun.jpg" class="imgRight">
 
-        <span>
-            <h1>Qu'est-ce qu'Innov'Anglais ?<br/></h1>
-            <h2><br/>Innov'Anglais est une application qui vas vous aidez pour l'aprentissage de<br/>l'anglais, que se soit pour votre culture général, ou dans le cadre de <br/>votre travail.</h2>      
-        </span>
-        
-    </article>
-    <article class="connect-art" style="margin-top: 5%">
-        
-        <img src="./css/english.jpg" class="imgLeft"> 
-        
-        <span>
-            <h1>Title<h1>
-            <h2>Text,Text,Text,Text,Text,Text,Text,Text,Text,Text,</h2>
-        </span>
+            <span>
+                <h1>Qu'est-ce qu'Innov'Anglais ?<br/></h1>
+                <h2><br/>Innov'Anglais est une application qui vas vous aidez pour l'aprentissage de l'anglais, que se soit pour votre culture général, ou dans le cadre de votre travail.</h2>      
+            </span>
+    
+        </div>
+    </div>
+    <div class="card" style="margin-top: 5%">
 
+        <div class="container">
+            <img src="./css/english.jpg" class="imgLeft"> 
         
-    </article>
+            <span>
+                <h1>Title<h1>
+                <h2>Text,Text,Text,Text,Text,Text,Text,Text,Text,Text,</h2>
+            </span>
+    
+        </div>
+    </div>
     
 </div>
 {% endblock %}
