--- a/InovApi/templates/information/ccm.html.twig
+++ b/InovApi/templates/information/ccm.html.twig
@@ -3,7 +3,7 @@
 
 <div class="ccm" style="margin-top: 10%">
 
-    <div class="page-header mt-5 m-5 container ">
+    <div class="page-header container">
         <h1 class="text-white m-5">Innov'Anglais, c'est quoi ?</h1>
         <p class="container m-5 text-white">
             Le site Innov'Anglais a pour but de faciliter l'apprentissage de l'Anglais, de manière éducatif et sans prise de tête.
