--- a/InovApi/public/css/style.css
+++ b/InovApi/public/css/style.css
@@ -24,10 +24,17 @@
 
 .ccm {
     background-color: black;
-    position: fixed;
+    height: 50%;
     width: 50%;
     opacity: 80%;
     margin-left: 5%;
+    border-radius: 0.5%;
+}
+
+.ccm div{ 
+    padding-top:20px;
+    padding-bottom: 20px;
+    margin-left: 4%;
 }
 
 .list-group-item {
@@ -36,82 +43,106 @@
 }
 
 .nav-toggle-overide {
-        position: fixed !important;
-        left: 0;
-        right: 0;
-        z-index: 8000;
+    position: fixed !important;
+    left: 0;
+    right: 0;
+    z-index: 8000;
 }
 
-    .bg-picture {
-        position: fixed;
-        left: 0;
-        right: 0;
-        display: block;
-        background-image: url("london.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        width: 100%;
-        height: 100%;
-        -webkit-filter: blur(5px);
-        -moz-filter: blur(5px);
-        -o-filter: blur(5px);
-        -ms-filter: blur(5px);
-        filter: blur(5px);
-        z-index: -1;
-    }
+.bg-picture {
+    position: fixed;
+    left: 0;
+    right: 0;
+    display: block;
+    background-image: url("london.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    z-index: -1;
+}
 
-    .navsize {
-        height: 80px;
-    }
+.navsize {
+    height: 80px;
+}
 
-    .connect-box {
-        background-color: rgba(255, 255, 255, 0.8);
-    }
+.connect-box {
+    background-color: rgba(255, 255, 255, 0.8);
+}
 
-    .connect-art {
-        background-color: rgba(255, 255, 255, 0.8);
-        width: 100%;
-    }
+.connect-art {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+}
 
-    .text {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+.text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
-    span:after {
-        clear: both;
-        content: "";
-        display: block;
-        text-align: center;
-        position: center
-    }
+span:after {
+    clear: both;
+    content: "";
+    display: block;
+    text-align: center;
+    position: center
+}
 
-    .imgLeft {
-        width: 900px;
-        height: 400px;
-        border: 0;
-        vertical-align: middle;
-        float: left;
-    }
+.imgLeft {
+    padding-top:20px;
+    width: 500px;
+    height: 400px;
+    border: 0;
+    vertical-align: middle;
+    float: left;
+    padding-bottom:20px;
+    padding-right:20px;
+}
 
-    .imgRight {
-        width: 900px;
-        height: 400px;
-        border: 0;
-        vertical-align: middle;
-        float: right;
-    }
+.imgRight {
+    padding-top:20px;
+    width: 500px;
+    height: 400px;
+    border: 0;
+    vertical-align: middle;
+    float: right;
+    padding-bottom:20px;
+    padding-left:20px;
+}
 
-    footer {
-        text-align: center;
-        padding-right: 10px;
-        margin-top: 20px;
-        position: center;
-        width: 100%;
-        height: auto;
-    }   height: auto;
-    }
+footer {
+    text-align: center;
+    padding-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: center;
+    width: 100%;
+    height: auto;
+}
+
+div article {
+    border-radius:0.5%;
+    margin-left: 5%;
+    margin-right:70%;
+    padding-right:180px;
+}
+
+.card {
+    padding-top:20px;
+    padding-bottom:20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    height: 50%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 0.5%;
+}
+
